2006-09-07  Paul J Stevens <paul@nfg.nl>

	* pop3.c:
	code style cleanups
	* check_dbmail_imapd.c, dbmail-imapsession.c, dm_imaputil.c:
	speedup fetch by changing a join in _fetch_headers

2006-09-06  Aaron Stone  <aaron@serendipity.cx>

	* sievecmd.h, sievecmd.c:
	Removed superfluous header file, made functions static.
	* check_dbmail_imapd.c:
	More checks for proper address parsing.
	* serverparent.h, serverparent.c:
	All the duplicated code from the main daemons.
	* lmtpd.c, pop3d.c, imapd.c, timsieved.c:
	Lost some weight, now using common serverparent functions.
	* pidfile.c:
	Makes a local copy of the name of the file to unlink.
	* pool.h, pool.c:
	Generates a state file with a human readable scoreboard dump.
	* config.c:
	Analogues of pidfile functions for the statefile.
	* server.c:
	Dump the scoreboard on receipt of SIGUSR1.
	* dbmail.h.in, dbmailtypes.h, acinclude.m4, Makefile.am:
	Tie up some loose datatypes for the common daemon code.

2006-09-05  Paul J Stevens <paul@nfg.nl>

	* db.c, dbmail-imapsession.c, imap4.c, imapcommands.c:
	remove some spurious warnings and redundant calls to db_getmailbox

2006-09-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-message.c:
	fix typo
	* dbmail-message.c:
	do not truncate dbmail_headervalue.headervalue (closes #338)
	* dbmail-mailbox.c:
	plug the memleak in the sort code

2006-09-02  Paul J Stevens <paul@nfg.nl>

	* maintenance.c:
	issue warning when dbmail-util doesn't specify -y
	* check_dbmail_imapd.c, check_dbmail_mailbox.c, dbmail-mailbox.c, 
	  dbmail-mailbox.h, dbmailtypes.h:
	test and fix search/sort sequences with and without uid, but
	introduces a memleak.
	* check_dbmail_mailbox.c, misc.c:
	moved some tree testing into mailbox testcode
	* check_dbmail_mailbox.c, dbmail-mailbox.c, test-scripts/testsort.imap:
	fix dbmail_mailbox_get_set

2006-08-31  Aaron Stone  <aaron@serendipity.cx>

	* contrib/startup-scripts/gentoo:
	Unified startup script with conf.d configuration file.
