@@ -35,8 +35,6 @@ void CreateSocket(serverConfig_t *conf);
 int StartServer(serverConfig_t * conf);
 int StartCliServer(serverConfig_t * conf);
 int server_run(serverConfig_t *conf);
-void ClearConfig(serverConfig_t * conf);
-void LoadServerConfig(serverConfig_t * conf, const char * const service);
 
 pid_t server_daemonize(serverConfig_t *conf);
 
