@@ -41,6 +41,8 @@ extern volatile sig_atomic_t mainSig;
 
 static int SetMainSigHandler(void);
 static void MainSigHandler(int sig, siginfo_t * info, void *data);
+static void ClearConfig(serverConfig_t * conf);
+static void LoadServerConfig(serverConfig_t * config, const char * const service);
 
 void serverparent_showhelp(const char *name, const char *greeting) {
 	printf("*** %s ***\n", name);
@@ -63,7 +65,7 @@ void serverparent_showhelp(const char *name, const char *greeting) {
  * 0 all is well, config is updated
  * 1 help must be shown, then quit
  */ 
-int serverparent_getopt(serverConfig_t *config, int argc, char *argv[])
+int serverparent_getopt(serverConfig_t *config, const char *service, int argc, char *argv[])
 {
 	int opt;
 
@@ -113,6 +115,13 @@ int serverparent_getopt(serverConfig_t *config, int argc, char *argv[])
 		}
 	}
 
+	TRACE(TRACE_DEBUG, "reading config");
+	config_read(configFile);
+	ClearConfig(config);
+	SetTraceLevel(service);
+	LoadServerConfig(config, service);
+	GetDBParams(&_db_params);
+
 	return 0;
 }
 
@@ -149,17 +158,6 @@ int serverparent_mainloop(serverConfig_t *config, const char *service)
 	return 0;
 }
 
-void serverparent_config(serverConfig_t *config, const char *service)
-{
-	TRACE(TRACE_DEBUG, "reading config");
-	config_read(configFile);
-	ClearConfig(config);
-	SetTraceLevel(service);
-	LoadServerConfig(config, service);
-	GetDBParams(&_db_params);
-}
-
-
 void MainSigHandler(int sig, siginfo_t * info UNUSED, void *data UNUSED)
 {
 	mainSig = sig;
@@ -192,4 +190,222 @@ int SetMainSigHandler()
 	return 0;
 }
 
+void ClearConfig(serverConfig_t * conf)
+{
+	memset(conf, 0, sizeof(serverConfig_t));
+}
+
+void LoadServerConfig(serverConfig_t * config, const char * const service)
+{
+	field_t val;
+
+	config_get_logfiles(config);
+
+	/* read items: NCHILDREN */
+	config_get_value("NCHILDREN", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: no value for NCHILDREN in config file",
+		      __FILE__, __func__);
+
+	if ((config->startChildren = atoi(val)) <= 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: value for NCHILDREN is invalid: [%d]",
+		      __FILE__, __func__, config->startChildren);
+
+	trace(TRACE_DEBUG,
+	      "%s,%s: server will create  [%d] children",
+	      __FILE__, __func__, config->startChildren);
+
+
+	/* read items: MAXCONNECTS */
+	config_get_value("MAXCONNECTS", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: no value for MAXCONNECTS in config file",
+		      __FILE__, __func__);
+
+	if ((config->childMaxConnect = atoi(val)) <= 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: value for MAXCONNECTS is invalid: [%d]",
+		      __FILE__, __func__, config->childMaxConnect);
+
+	trace(TRACE_DEBUG,
+	      "%s,%s: children will make max. [%d] connections",
+	      __FILE__, __func__, config->childMaxConnect);
+
+
+	/* read items: TIMEOUT */
+	config_get_value("TIMEOUT", service, val);
+	if (strlen(val) == 0) {
+		trace(TRACE_DEBUG,
+		      "%s,%s: no value for TIMEOUT in config file",
+		      __FILE__, __func__);
+		config->timeout = 0;
+	} else if ((config->timeout = atoi(val)) <= 30)
+		trace(TRACE_FATAL,
+		      "%s,%s: value for TIMEOUT is invalid: [%d]",
+		      __FILE__, __func__, config->timeout);
+
+	trace(TRACE_DEBUG, "%s,%s: timeout [%d] seconds",
+	      __FILE__, __func__, config->timeout);
+
+	/* SOCKET */
+	config_get_value("SOCKET", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_DEBUG,"%s,%s: no value for SOCKET in config file",
+				__FILE__, __func__);
+	strncpy(config->socket, val, FIELDSIZE);
+	trace(TRACE_DEBUG, "%s,%s: socket %s", 
+			__FILE__, __func__, config->socket);
+	
+	/* read items: PORT */
+	config_get_value("PORT", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: no value for PORT in config file",
+		      __FILE__, __func__);
+
+	if ((config->port = atoi(val)) <= 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: value for PORT is invalid: [%d]",
+		      __FILE__, __func__, config->port);
+
+	trace(TRACE_DEBUG, "%s,%s: binding to PORT [%d]",
+	      __FILE__, __func__, config->port);
+
+
+	/* read items: BINDIP */
+	config_get_value("BINDIP", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_FATAL,
+			"%s,%s: no value for BINDIP in config file",
+			__FILE__, __func__);
+
+	strncpy(config->ip, val, IPLEN);
+	config->ip[IPLEN - 1] = '\0';
+
+	trace(TRACE_DEBUG, "%s,%s: binding to IP [%s]",
+			__FILE__, __func__, config->ip);
+
+	/* read items: BACKLOG */
+	config_get_value("BACKLOG", service, val);
+	if (strlen(val) == 0) {
+		trace(TRACE_DEBUG,
+			"%s,%s: no value for BACKLOG in config file. Using default value [%d]",
+			__FILE__, __func__, BACKLOG);
+		config->backlog = BACKLOG;
+	} else if ((config->backlog = atoi(val)) <= 0)
+		trace(TRACE_FATAL,
+			"%s,%s: value for BACKLOG is invalid: [%d]",
+			__FILE__, __func__, config->backlog);
+
+	/* read items: RESOLVE_IP */
+	config_get_value("RESOLVE_IP", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_DEBUG,
+		      "%s,%s: no value for RESOLVE_IP in config file",
+		      __FILE__, __func__);
+
+	config->resolveIP = (strcasecmp(val, "yes") == 0);
+
+	trace(TRACE_DEBUG, "%s,%s: %sresolving client IP",
+	      __FILE__, __func__, config->resolveIP ? "" : "not ");
+
+	/* read items: service-BEFORE-SMTP */
+	char *service_before_smtp = g_strconcat(service, "_BEFORE_SMTP", NULL);
+	config_get_value(service_before_smtp, service, val);
+	g_free(service_before_smtp);
+
+	if (strlen(val) == 0)
+		trace(TRACE_DEBUG,
+		      "%s,%s: no value for %s_BEFORE_SMTP  in config file",
+		      __FILE__, __func__, service);
+
+	config->service_before_smtp = (strcasecmp(val, "yes") == 0);
+
+	trace(TRACE_DEBUG, "%s,%s: %s %s-before-SMTP",
+	      __FILE__, __func__,
+	      config->service_before_smtp ? "Enabling" : "Disabling", service);
+
+
+	/* read items: EFFECTIVE-USER */
+	config_get_value("EFFECTIVE_USER", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: no value for EFFECTIVE_USER in config file",
+		      __FILE__, __func__);
+
+	strncpy(config->serverUser, val, FIELDSIZE);
+	config->serverUser[FIELDSIZE - 1] = '\0';
+
+	trace(TRACE_DEBUG,
+	      "%s,%s: effective user shall be [%s]",
+	      __FILE__, __func__, config->serverUser);
+
+
+	/* read items: EFFECTIVE-GROUP */
+	config_get_value("EFFECTIVE_GROUP", service, val);
+	if (strlen(val) == 0)
+		trace(TRACE_FATAL,
+		      "%s,%s: no value for EFFECTIVE_GROUP in config file",
+		      __FILE__, __func__);
+
+	strncpy(config->serverGroup, val, FIELDSIZE);
+	config->serverGroup[FIELDSIZE - 1] = '\0';
+
+	trace(TRACE_DEBUG,
+	      "%s,%s: effective group shall be [%s]",
+	      __FILE__, __func__, config->serverGroup);
+
+
+       /* read items: MINSPARECHILDREN */
+       config_get_value("MINSPARECHILDREN", service, val);
+       if (strlen(val) == 0)
+               trace(TRACE_FATAL,
+                       "%s,%s: no value for MINSPARECHILDREN in config file",
+		        __FILE__, __func__);
+       if ( (config->minSpareChildren = atoi(val)) <= 0)
+               trace(TRACE_FATAL,
+                       "%s,%s: value for MINSPARECHILDREN is invalid: [%d]",
+                       __FILE__, __func__, config->minSpareChildren);
+
+       trace(TRACE_DEBUG,
+               "%s,%s: will maintain minimum of [%d] spare children in reserve",
+               __FILE__, __func__, config->minSpareChildren);
+
+
+       /* read items: MAXSPARECHILDREN */
+       config_get_value("MAXSPARECHILDREN", service, val);
+       if (strlen(val) == 0)
+               trace(TRACE_FATAL,
+                       "%s,%s: no value for MAXSPARECHILDREN in config file",
+		       __FILE__, __func__);
+       if ( (config->maxSpareChildren = atoi(val)) <= 0)
+               trace(TRACE_FATAL,
+                       "%s,%s: value for MAXSPARECHILDREN is invalid: [%d]",
+                       __FILE__, __func__, config->maxSpareChildren);
+
+       trace(TRACE_DEBUG,
+               "%s,%s: will maintain maximum of [%d] spare children in reserve",
+               __FILE__, __func__, config->maxSpareChildren);
+
+
+       /* read items: MAXCHILDREN */
+       config_get_value("MAXCHILDREN", service, val);
+       if (strlen(val) == 0)
+               trace(TRACE_FATAL,
+                       "%s,%s: no value for MAXCHILDREN in config file",
+		       __FILE__, __func__);
+       if ( (config->maxChildren = atoi(val)) <= 0)
+               trace(TRACE_FATAL,
+                       "%s,%s: value for MAXCHILDREN is invalid: [%d]",
+                       __FILE__, __func__, config->maxSpareChildren);
+
+       trace(TRACE_DEBUG,
+               "%s,%s: will allow maximum of [%d] children",
+               __FILE__, __func__, config->maxChildren);
+
+
+}
 
