@@ -29,8 +29,7 @@
 #include "dbmail.h"
 
 void serverparent_showhelp(const char *service, const char *greeting);
-int serverparent_getopt(serverConfig_t *config, int argc, char *argv[]);
+int serverparent_getopt(serverConfig_t *config, const char *service, int argc, char *argv[]);
 int serverparent_mainloop(serverConfig_t *config, const char *service);
-void serverparent_config(serverConfig_t *config, const char *service);
 
 #endif
