@@ -1,3 +1,13 @@
+2006-09-08  Aaron Stone  <aaron@serendipity.cx>
+
+	* db.c, acl.c, imapcommands.c:
+	Clarify the ACL checks for IMAP delete and rename.
+	* lmtpd.c, pop3d.c, imapd.c, timsieved.c:
+	Removed call to serverparent_config.
+	* server.c, server.h, serverparent.c, serverparent.h:
+	Consolidated serverparent_config with serverparent_getopt,
+	moved ClearConfig and LoadServerConfig to serverparent.
+
 2006-09-07  Paul J Stevens <paul@nfg.nl>
 
 	* pop3.c:
